WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
217451
REGRESSION: Safari unable to load PDF in <embed> (docs.legalconnect.com)
https://bugs.webkit.org/show_bug.cgi?id=217451
Summary
REGRESSION: Safari unable to load PDF in <embed> (docs.legalconnect.com)
Tim Horton
Reported
2020-10-07 15:36:45 PDT
REGRESSION: Safari unable to load PDF in <embed> (docs.legalconnect.com)
Attachments
Patch
(8.28 KB, patch)
2020-10-07 15:37 PDT
,
Tim Horton
no flags
Details
Formatted Diff
Diff
Patch
(9.06 KB, patch)
2020-10-07 16:30 PDT
,
Tim Horton
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Tim Horton
Comment 1
2020-10-07 15:37:06 PDT
Created
attachment 410793
[details]
Patch
Tim Horton
Comment 2
2020-10-07 15:37:08 PDT
<
rdar://problem/69767043
>
Tim Horton
Comment 3
2020-10-07 16:30:16 PDT
Created
attachment 410799
[details]
Patch
EWS
Comment 4
2020-10-07 17:01:31 PDT
Committed
r268162
: <
https://trac.webkit.org/changeset/268162
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 410799
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug